# media-janitor

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
development/: Dockerfile
media_janitor/: Procfile.tailwind
media_janitor/config/: settings.py  urls.py
media_janitor/scanner/: admin.py  constants.py  models.py  paths.py  tasks.py
media_janitor/scanner/clients/: __init__.py  base.py  qbittorrent.py
media_janitor/scanner/clients/tests/: test_qbittorrent.py
media_janitor/scanner/management/commands/: enqueue_scan.py
media_janitor/scanner/migrations/: 0001_initial.py  0002_add_help_texts.py  0003_alter_blob_status.py  0004_remove_scan_summary_totals_scan_status_totals.py
media_janitor/scanner/pipeline/: build.py  classify.py  derive.py  lock.py  orchestrator.py  seeding.py  walk.py
media_janitor/scanner/pipeline/tests/: test_build.py  test_classify.py  test_derive.py  test_lock.py  test_orchestrator.py  test_seeding.py  test_walk.py
media_janitor/scanner/tests/: test_config.py  test_constants.py  test_models.py  test_paths.py
media_janitor/theme/: context_processors.py
media_janitor/theme/static_src/: package-lock.json  package.json
media_janitor/theme/static_src/src/: styles.css
media_janitor/web/: context_processors.py  display.py  filters.py  urls.py  views.py
media_janitor/web/templates/media_janitor/: base.html  dashboard.html  reclaim.html
media_janitor/web/templates/media_janitor/fragments/: headline_band.html  no_scan.html  pagination_controls.html  ping.html  reclaim_table.html  sort_header.html  status_badge.html  status_breakdown.html
media_janitor/web/templates/media_janitor/registration/: login.html
media_janitor/web/templatetags/: janitor.py
media_janitor/web/tests/: factories.py  test_base_template.py  test_dashboard.py  test_reclaim.py  test_templatetags.py
